--- a/web/content.html
+++ b/web/content.html
@@ -14,7 +14,7 @@
     <div class="ft-section section-1" data-id="section-1">
         <div id="/section-1/page-1" class="ft-page page-1 " data-id="page-1">
             <p class="text1"><span id="text-75">(｡◕∀◕｡)</span> ❤ <span id="text-76">(✿◡‿◡)</span>
-            <p class="text2">容我酝酿一下情绪,按键盘"↓"或者上下滑动屏幕<span id="text-78">开始倾听我的表白>.<</span></p>
+            <p class="text2" style="color: white">容我酝酿一下情绪<br>按键盘"↓"或者手机上下滑动屏幕<span id="text-78">继续倾听我的表白>.<</span></p>
         </div>
         <div id="/section-1/page-2" class="ft-page page-2 full-img" data-id="page-2">
             <p class="top-text" id="text-1">时光荏苒<br>一如既往</p>
@@ -40,8 +40,8 @@
             <img src='img/img2-2.jpg'/>
         </div>
         <div id="/section-2/page-3" class="ft-page page-7 full-img" data-id="page-3">
-            <h3 class="center-text" id="text-6">仿佛一切不再静谧.</h3>
-            <img src='img/img2-3.jpeg'/>
+            <h2>仿佛一切在悄悄发生变化.</h2>
+            <img src='img/img2-3.png'/>
         </div>
         <div id="/section-2/page-4" class="ft-page page-8 full-img" data-id="page-4">
             <h2 class="center-text" id="text-7">在<strong>J</strong>的印象中<br>这个女孩<br>很努力<br>很聪明<br>很优秀<br>...</h2>
@@ -52,7 +52,7 @@
             <img src='img/img2-5.jpg'/>
         </div>
         <div id="/section-2/page-6" class="ft-page page-10 full-img" data-id="page-6">
-            <h2 class="center-text" id="text-9"><strong>女神!</strong></h2>
+            <h2 class="center-text" id="text-9"><strong style="color: pink;">女神!</strong></h2>
             <img src='img/img2-6.jpg'/>
         </div>
     </div>
@@ -80,7 +80,7 @@
         </div>
         <div id="/section-3/page-3" class="ft-page page-13 full-img" data-id="page-3">
             <img src='img/img3-3.jpg'/>
-            <h3 id="text-13">于是,<strong>J</strong>开始每晚都找<strong>M</strong>聊天,仿佛期待着什么.</h3>
+            <h2 id="text-13">于是,<strong>J</strong>开始每晚都找<strong>M</strong>聊天,仿佛期待着什么.</h2>
         </div>
         <div id="/section-3/page-4" class="ft-page page-14 full-img" data-id="page-4">
             <h3 id="text-14">期待着什么呢...</h3>
@@ -109,11 +109,11 @@
         </div>
         <div id="/section-4/page-2" class="ft-page page-19 full-img" data-id="page-2">
             <h3 id="text-21">大冬天竟然也会大汗淋漓.</h3>
-            <img src="img/img4-2.jpg"/>
+            <img src="img/img4-2.png"/>
         </div>
         <div id="/section-4/page-3" class="ft-page page-20 full-img" data-id="page-3">
             <h3 id="text-22"><strong>J</strong>开始规划生活.</h3>
-            <img src='img/img4-3.jpg'/>
+            <img src='img/img4-3.png'/>
         </div>
         <div id="/section-4/page-4" class="ft-page page-21 full-img" data-id="page-4">
             <h3 id="text-23">开始给自己定很多小目标.</h3>
@@ -159,13 +159,13 @@
             <img src='img/img5-6.jpg'/>
         </div>
         <div id="/section-5/page-7" class="ft-page page-31 full-img" data-id="page-7">
-            <h3 id="text-34">恩,要守护多久呢.</h3>
+            <h3 id="text-34" style="color: white;">恩,要守护多久呢.</h3>
             <img src='img/img5-7.jpg'/>
         </div>
     </div>
     <div class="ft-section section-6" data-id="section-6">
         <div id="/section-6/page-1" class="ft-page page-32 full-img" data-id="page-1">
-            <h3 id="text-35" ><strong>永远!</strong></h3>
+            <h3 id="text-35" ><strong style="color:white;">永远!</strong><br>&lt;forever and ever&gt;</h3>
             <img src='img/img6-1.png'/>
         </div>
         <div id="/section-6/page-2" class="ft-page page-33 top-text full-img" data-id="page-2">
@@ -212,7 +212,7 @@
             <h3 id="text-46">然而(╥﹏╥)</h3>
         </div>
         <div id="/section-7/page-4" class="ft-page page-42 full-img" data-id="page-4">
-            <h3><span id="text-47">对不起嘛~</span>
+            <h3><span id="text-47">对不起咯~</span>
             </h3>
             <img src='img/img7-4.png'/>
         </div>
@@ -259,7 +259,7 @@
             <img src='img/img8-4.png'/>
         </div>
         <div id="/section-8/page-5" class="ft-page page-50 full-img" data-id="page-5">
-            <p id="text-66">若拒绝,<br>请决绝.</p>
+            <p id="text-66" style="color: snow">若拒绝,<br>请决绝.</p>
             <img src='img/img8-5.png'/>
         </div>
         <div id="/section-8/page-6" class="ft-page page-51" data-id="page-6">
@@ -278,7 +278,7 @@
             <img src='img/img9-2.jpg'/>
         </div>
         <div id="/section-9/page-3" class="ft-page page-54 full-img" data-id="page-3">
-            <h3><strong>I love you>.<</strong></h3>
+            <h3><strong style="color: lightpink">I love you>.<</strong></h3>
             <img src='img/img9-3.jpg'/>
         </div>
         <div id="/section-9/page-4" class="ft-page page-55 right-img" data-id="page-4">
@@ -289,7 +289,7 @@
                 <br>
                 <span> -- 期待女神接收我的<strong id="star" style="color: red;">♥</strong>意
                 <br><br><br>(如果用电脑打开,<br>可以按一下Esc哦>_<)
-                    <br><br><br><a href="index.html"style="color: #0d85d1">BACK</a>
+                    <br><br><br><a id="back" href="index.html" style="color: #0d85d1">BACK</a>
                 </span>
             </p>
         </div>
@@ -301,5 +301,12 @@
 <script src="js/brav1toolbox.js"></script>
 <script src="js/flowtime.js"></script>
 <script src="js/love.js"></script>
+<script>
+    $(function () {
+        $("#back").on("touchstart",function(event){
+            window.location.href = "index.html";
+        });
+    })
+</script>
 </body>
 </html>
