--- a/web/content.html
+++ b/web/content.html
@@ -185,15 +185,15 @@
             <img src='img/img6-5.jpg'/>
         </div>
         <div id="/section-6/page-6" class="ft-page page-37 full-img" data-id="page-6">
-            <h3 id="text-42">尴尬了,文艺不下去了<br>(,,•́ . •̀,,)...</h3>
+            <h3 id="text-42">尴尬了<br>文艺不下去了<br>肿么办<br>(,,•́ . •̀,,)...</h3>
             <img src='img/img6-6.jpg'/>
         </div>
         <div id="/section-6/page-7" class="ft-page page-38 full-img" data-id="page-7">
-            <h3 id="text-43">果然<br>表白本应该捧上一束鲜花<br>
+            <h3 id="text-43">果然<br>表白应该捧上一束鲜花<br>
                 递上一盒巧克力<br>
                 深情的说一句:我爱你~<br>
                 <br>
-                如此轻松愉悦的事,竟被我做成了体力活+脑力活...
+                本应该如此轻松愉悦,<br>我却如此费劲心思...
             </h3>
             <img src='img/img6-7.png'/>
         </div>
