--- a/web/content.html
+++ b/web/content.html
@@ -124,8 +124,8 @@
             <img src='img/img4-5.jpg'/>
         </div>
         <div id="/section-4/page-6" class="ft-page page-23 full-img" data-id="page-6">
-            <h3 id="text-25">虽然以前也没个正经,<br>偶尔假正经.(▼ _ ▼)</h3>
-            <img src='img/img4-6.jpg'/>
+            <h3 id="text-25">偶尔很正经<br>偶尔假正经<br>(▼ _ ▼)</h3>
+            <img src='img/img4-6.png'/>
         </div>
         <div id="/section-4/page-7" class="ft-page page-24 full-img" data-id="page-7">
             <h3 id="text-26"><strong>J</strong>开始明白.</h3>
@@ -181,7 +181,7 @@
             <img src='img/img6-4.png'/>
         </div>
         <div id="/section-6/page-5" class="ft-page page-36 full-img" data-id="page-5">
-            <h3 id="text-41"><strong>J</strong> start to love <strong>M</strong></h3>
+            <h3 id="text-41"><strong>J</strong> fall in love with <strong>M</strong></h3>
             <img src='img/img6-5.jpg'/>
         </div>
         <div id="/section-6/page-6" class="ft-page page-37 full-img" data-id="page-6">
