--- a/web/content.html
+++ b/web/content.html
@@ -274,7 +274,7 @@
             <img src='img/img9-1.png'/>
         </div>
         <div id="/section-9/page-2" class="ft-page page-53 full-img" data-id="page-2">
-            <h3 id="text-72" >情人节快乐.</h3>
+            <h3 id="text-72">提前祝你<br>情人节快乐.</h3>
             <img src='img/img9-2.jpg'/>
         </div>
         <div id="/section-9/page-3" class="ft-page page-54 full-img" data-id="page-3">
